@@ -313,7 +313,10 @@ xfce_clock_lcd_expose_event (GtkWidget      *widget,
         /* clip the drawing area */
         gdk_cairo_rectangle (cr, &event->area);
         cairo_clip (cr);
-        
+
+        /* set the source color */
+        gdk_cairo_set_source_color (cr, &widget->style->fg[GTK_STATE_NORMAL]);
+
         /* get the local time */
         xfce_clock_util_get_localtime (&tm);
 
