@@ -4,6 +4,7 @@
 - Fix dragging to launcher submenu items (bug #4026).
 - Send the event time with startup notification instead
   of zero, so focus stealing works properly.
+- Set the foreground color of the lcd clock (bug #4923).
 
 4.5.99.1
 ========
